--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.8",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-google-maps/api": "^2.19.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "geojson-places": "^1.0.8",
     "lucide-react": "^0.446.0",
     "next": "15.0.0-rc.0",
     "next-themes": "^0.3.0",
@@ -24,6 +26,7 @@
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.58.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
