--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-google-maps/api": "^2.19.3",
+    "@types/three": "^0.169.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "geojson-places": "^1.0.8",
@@ -23,6 +24,7 @@
     "react-dom": "19.0.0-rc-2d16326d-20240930",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.169.0",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
