--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@googlemaps/js-api-loader": "^1.16.8",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-google-maps/api": "^2.19.3",
     "@types/three": "^0.169.0",
@@ -23,6 +24,7 @@
     "next-themes": "^0.3.0",
     "react": "19.0.0-rc-2d16326d-20240930",
     "react-dom": "19.0.0-rc-2d16326d-20240930",
+    "react-resizable-panels": "^2.1.4",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.169.0",
