--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "geojson-places": "^1.0.8",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.446.0",
     "next": "15.0.0-rc.0",
     "next-themes": "^0.3.0",
     "react": "19.0.0-rc-2d16326d-20240930",
     "react-dom": "19.0.0-rc-2d16326d-20240930",
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-cluster": "^2.1.0",
     "react-resizable-panels": "^2.1.4",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
@@ -32,6 +35,7 @@
   },
   "devDependencies": {
     "@types/google.maps": "^3.58.1",
+    "@types/leaflet": "^1.9.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
