--- a/package.json
+++ b/package.json
@@ -15,23 +15,20 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-google-maps/api": "^2.19.3",
-    "@types/three": "^0.169.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "geojson-places": "^1.0.8",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.446.0",
-    "next": "^15.0.1",
+    "next": "14.2.16",
     "next-themes": "^0.3.0",
-    "react": "19.0.0-rc-2d16326d-20240930",
-    "react-dom": "19.0.0-rc-2d16326d-20240930",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^2.1.0",
     "react-resizable-panels": "^2.1.4",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.169.0",
-    "xml2js": "^0.6.2",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
@@ -40,7 +37,6 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/xml2js": "^0.4.14",
     "eslint": "^8",
     "eslint-config-next": "15.0.0-rc.0",
     "eslint-config-prettier": "^9.1.0",
