--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "react-leaflet-cluster": "^2.1.0",
     "react-resizable-panels": "^2.1.5",
     "react-window": "^1.8.10",
+    "state-in-url": "^4.0.7",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
